<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
<!--        <variable-->
<!--            name="viewModel"-->
<!--            type="" />-->
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.main.activities.EditWorkoutActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/editWorkoutAppBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:liftOnScroll="false">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/editWorkoutTopAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/edit_workout_activity_top_app_bar"
                app:navigationIcon="@drawable/ic_navigation_24dp"
                app:titleTextColor="@color/black" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:background="@color/cardviewBackground"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/sets_column_label"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/reps_column_label"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/weight_column_label"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/workoutSet1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:background="@color/transparent"
                        android:src="@drawable/ic_remove_24"
                        tools:ignore="UnusedAttribute" />

                    <EditText
                        android:id="@+id/set1Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="false"
                        android:gravity="center"
                        android:inputType="number"
                        tools:text="1"
                        android:importantForAutofill="no" />

                    <EditText
                        android:id="@+id/set1RepsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:inputType="number"
                        tools:text="10"
                        android:importantForAutofill="no" />

                    <EditText
                        android:id="@+id/set1WeightText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        tools:text="30"
                        android:importantForAutofill="no" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/workoutSet2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:background="@color/transparent"
                        android:src="@drawable/ic_remove_24" />

                    <EditText
                        android:id="@+id/set2Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="false"
                        android:gravity="center"
                        android:inputType="number"
                        tools:text="2"
                        android:importantForAutofill="no" />

                    <EditText
                        android:id="@+id/set2RepsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:inputType="number"
                        tools:text="8"
                        android:importantForAutofill="no" />

                    <EditText
                        android:id="@+id/set2WeightText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        tools:text="40"
                        android:importantForAutofill="no" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/workoutSet3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:background="@color/transparent"
                        android:src="@drawable/ic_remove_24" />

                    <EditText
                        android:id="@+id/set3Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="false"
                        android:gravity="center"
                        android:inputType="number"
                        tools:text="3"
                        android:importantForAutofill="no" />

                    <EditText
                        android:id="@+id/set3RepsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:inputType="number"
                        tools:text="8"
                        android:importantForAutofill="no" />

                    <EditText
                        android:id="@+id/set3WeightText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        tools:text="50"
                        android:importantForAutofill="no" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/workoutSet4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_remove_24" />

                    <EditText
                        android:id="@+id/set4Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="false"
                        android:gravity="center"
                        android:inputType="number"
                        android:importantForAutofill="no" />

                    <EditText
                        android:id="@+id/set4RepsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:inputType="number"
                        android:importantForAutofill="no" />

                    <EditText
                        android:id="@+id/set4WeightText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:importantForAutofill="no" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/workoutSet5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_remove_24" />

                    <EditText
                        android:id="@+id/set5Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="false"
                        android:gravity="center"
                        android:inputType="number"
                        android:importantForAutofill="no" />

                    <EditText
                        android:id="@+id/set5RepsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:inputType="number"
                        android:importantForAutofill="no" />

                    <EditText
                        android:id="@+id/set5WeightText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:importantForAutofill="no" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/workoutSet6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_remove_24" />

                    <EditText
                        android:id="@+id/set6Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="false"
                        android:gravity="center"
                        android:inputType="number"
                        android:importantForAutofill="no" />

                    <EditText
                        android:id="@+id/set6RepsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:inputType="number"
                        android:importantForAutofill="no" />

                    <EditText
                        android:id="@+id/set6WeightText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:importantForAutofill="no" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2" />
                </LinearLayout>

                <Button
                    android:id="@+id/addSetButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    app:backgroundTint="@color/colorSecondary"
                    android:text="@string/add_set_label"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/chooseCategorySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="36dp"
                    android:layout_marginLeft="36dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="36dp"
                    android:layout_marginRight="36dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/colorSecondary"
                    android:gravity="center" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editWorkoutDoneFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            app:backgroundTint="@color/colorAccent"
            android:src="@drawable/ic_check_mark_24" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>